# diagnosisApp-Website

./: .replit  README.md  app.py  pyproject.toml  requirements.txt  setup.py
static/: Video.webm
templates/: admin.html  base.html  consultation.html  create_patient.html  credentials.html  credentials_for_selection.html  home.html
