[tool.poetry]
name = "repl-nix-diagnosisapp-website"
version = "0.1.0"
description = ""
authors = ["pita.domingos@zd044onmicrosoft.com"]
readme = "README.md"
packages = [{include = "repl_nix_diagnosisapp_website"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
setuptools = "^70.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
